<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">考拉遥控器</string>
    <string name="about">关于</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
     <string name="exit">退出</string>

</resources>