<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_repeat"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include layout="@layout/title_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <ToggleButton
                android:id="@+id/btn_start_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/btn_selector_1"
                 android:textColor="#FFFFFF"
                android:textOff="ON"
                android:textOn="OFF" />

            <Button
                android:id="@+id/btn_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/btn_selector"
                android:enabled="false"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_selector"
                android:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btn_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_selector"
                android:text="@string/one" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_selector"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_selector"
                android:text="@string/three" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btn_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_selector"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_selector"
                android:text="@string/five" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_selector"
                android:text="@string/six" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_selector"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_selector"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_selector"
                android:text="@string/nine" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>